Add paper BibLaTeX file

--- a/paper/Multi Domain SFI.tex
+++ b/paper/Multi Domain SFI.tex
@@ -8,7 +8,7 @@
 \definecolor{light-gray}{gray}{0.95}
 
 \usepackage[style=ieee]{biblatex}
-\addbibresource{CS91r.bib}
+\addbibresource{Multi Domain SFI.bib}
  
 \begin{document}
  
